Added Employee and refactor code

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
                       Car Loan Calculator
                   </a>
               </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="employees.html">
+                      Employees
+                  </a>
+              </li>
           </ul>
          
         </div>
