--- a/carloan.html
+++ b/carloan.html
@@ -35,6 +35,11 @@
                     Car Loan Calculator
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="employees.html">
+                    Employees
+                </a>
+            </li>
         </ul>
     </div>
 </nav>
