--- a/mathexamples.html
+++ b/mathexamples.html
@@ -38,6 +38,11 @@
                         Car Loan Calculator
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="employees.html">
+                        Employees
+                    </a>
+                </li>
             </ul>
 
         </div>
