--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <header>
         <h1> Home </h1>
     </header> 
-    <main>
+    <main id="main">
         
     </main>    
     <footer>
