--- a/mathexamples.html
+++ b/mathexamples.html
@@ -43,6 +43,12 @@
                         Employees
                     </a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="switchStatement.html">
+                        switch/loops
+                    </a>
+                </li>
             </ul>
 
         </div>
