--- a/index.html
+++ b/index.html
@@ -42,22 +42,33 @@
                       Employees
                   </a>
               </li>
+
+              <li class="nav-item">
+                  <a class="nav-link" href="switchStatement.html">
+                      switch/loops
+                  </a>
+              </li>
           </ul>
          
         </div>
       </nav>
       <header>
-        <h1> Home </h1>
-    </header> 
+        <h1> Employees </h1>
+    </header>
+
+    <div id="spinner" class="spinner-border d-none" style="width: 5rem; height: 5rem;" role="status">
+        <span class="sr-only">Loading...</span>
+    </div>
     <main id="main">
-        
-    </main>    
+    </main>
+
+    <button id="btnLoadData" name="btnLoadData" class="btn-primary btn-lg">Load Data</button>
     <footer>
         &copy; Copyright 2021 HTML Template
     </footer>
     <!-- scripts -->
     <script src="dist/libs/jquery/dist/jquery.js"></script>
     <script src="dist/libs/bootstrap/dist/js/bootstrap.bundle.js"></script>
-    <script src="dist/js/main.js"></script>
+    <script src="dist/js/views/employeeListView.js"></script>
 </body>
 </html>
