--- a/register.html
+++ b/register.html
@@ -42,6 +42,12 @@
                     Employees
                 </a>
             </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="switchStatement.html">
+                    switch/loops
+                </a>
+            </li>
         </ul>
     </div>
 </nav>
