--- a/switchStatement.html
+++ b/switchStatement.html
@@ -7,13 +7,15 @@
     <link rel="stylesheet" href="dist/libs/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="dist/libs/toastr/build/toastr.css">
     <link rel="stylesheet" href="dist/css/site.css">
-    <title>Car Loan Calculator</title>
+    <title>Switch Statement</title>
 </head>
+
 <body class="container">
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Classes and Interfaces</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -26,11 +28,12 @@
                 <a class="nav-link" href="mathexamples.html">Math Examples</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="register.html" >
+                <a class="nav-link" href="register.html">
                     Register
                 </a>
+
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="carloan.html" >
                     Car Loan Calculator
                 </a>
@@ -40,45 +43,31 @@
                     Employees
                 </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="switchStatement.html">
                     switch/loops
                 </a>
             </li>
         </ul>
+
     </div>
 </nav>
 <header>
-    <h1>Car Loan Calculator</h1>
+    <h1>Switch Statement</h1>
 </header>
-<main class="flex-container">
-    <section class="flex-item">
-        <form>
-            <div class="form-group">
-                <label for="txtLoanAmount">Loan Amount</label>
-                <input class="form-control" type="text" id="txtLoanAmount" name="txtLoanAmount" />
-            </div>
-            <div class="form-group">
-                <label for="txtInterestRate">Interest  (%)</label>
-                <input class="form-control" type="text" id="txtInterestRate" name="txtInterestRate" />
-            </div>
-            <div class="form-group">
-                <label for="txtLoanPeriod">Loan Period (months)</label>
-                <input class="form-control" type="text" id="txtLoanPeriod" name="txtLoanPeriod" />
-            </div>
+<main>
+    <form id="form" name="form">
+        <section class="form-group">
+            <label for="ddlCountry"></label>
+            <select name="ddlCountry" id="ddlCountry" class="form-control">
+                <option selected="true" value="Select One">Select One</option>
+            </select>
+        </section>
+        <section class="form-group">
+            <button id="btnCheck" name="btnCheck" class="btn btn-primary btn-lg">Show Selection</button>
+        </section>
+    </form>
 
-        </form>
-    </section>
-    <section class="flex-item">
-        <div class="form-group">
-            <label for="txtTotalCost">Total Cost</label>
-            <input class="form-control" readonly type="text" id="txtTotalCost" name="txtLoanAmtxtTotalCostount" />
-        </div>
-        <div class="form-group">
-            <label for="txtMonthlyPayments">Monthly Payments</label>
-            <input class="form-control" readonly type="text" id="txtMonthlyPayments" name="txtMonthlyPayments" />
-        </div>
-    </section>
 </main>
 <footer>
     &copy; Copyright 2021 HTML Template
@@ -86,6 +75,7 @@
 <!-- scripts -->
 <script src="dist/libs/jquery/dist/jquery.js"></script>
 <script src="dist/libs/bootstrap/dist/js/bootstrap.bundle.js"></script>
-<script src="dist/js/views/carloan.js"></script>
+<script src="dist/js/views/switchStatementView.js"></script>
 </body>
+
 </html>
