--- a/mathexamples.html
+++ b/mathexamples.html
@@ -76,7 +76,7 @@
           </section>
         </form>
         <br/>
-        <ul id="answers" name="answers" class="list-group">
+        <ul id="answers" class="list-group">
             
         </ul>
     </main>
