--- a/switchStatement.html
+++ b/switchStatement.html
@@ -60,7 +60,7 @@
         <section class="form-group">
             <label for="ddlCountry"></label>
             <select name="ddlCountry" id="ddlCountry" class="form-control">
-                <option selected="true" value="Select One">Select One</option>
+                <option selected value="Select One">Select One</option>
             </select>
         </section>
         <section class="form-group">
