added base class and Action callback parameter

--- a/carloan.html
+++ b/carloan.html
@@ -49,7 +49,7 @@
     </div>
 </nav>
 <header>
-    <h1>Car Loan Calculator</h1>
+    <h1 id="header">Car Loan Calculator</h1>
 </header>
 <main class="flex-container">
     <section class="flex-item">
