--- a/employees.html
+++ b/employees.html
@@ -52,7 +52,7 @@
     </div>
 </nav>
 <header>
-    <h1>Employees </h1>
+    <h1 id="header"></h1>
 </header>
 <main>
     <form id="employeesForm" name="employeesForm">
