--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
       </nav>
       <header>
-        <h1> Employees </h1>
+        <h1 id="header"> Employees </h1>
     </header>
 
     <div id="spinner" class="spinner-border d-none" style="width: 5rem; height: 5rem;" role="status">
