--- a/mathexamples.html
+++ b/mathexamples.html
@@ -54,7 +54,7 @@
         </div>
     </nav>
     <header>
-        <h1>Math Functions </h1>
+        <h1 id="header">Math Functions </h1>
     </header>
     <main>
         <form id="operatorForm"  name="operatorForm">
