--- a/register.html
+++ b/register.html
@@ -52,7 +52,7 @@
     </div>
 </nav>
 <header>
-    <h1>Register </h1>
+    <h1 id="header">Register </h1>
 </header>
 <main>
     <form id="registerForm" name="registerForm">
