--- a/switchStatement.html
+++ b/switchStatement.html
@@ -53,7 +53,7 @@
     </div>
 </nav>
 <header>
-    <h1>Switch Statement</h1>
+    <h1 id="header">Switch Statement</h1>
 </header>
 <main>
     <form id="form" name="form">
