--- a/mathexamples.html
+++ b/mathexamples.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"----->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,13 +12,12 @@
 
 <body class="container">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar = navbar-light bg-light">
         <a class="navbar-brand" href="#">Classes and Interfaces</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
@@ -54,7 +53,7 @@
         </div>
     </nav>
     <header>
-        <h1 id="header">Math Functions </h1>
+        <h1 id="header"></h1>
     </header>
     <main>
         <form id="operatorForm"  name="operatorForm">
