--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     <!-- scripts -->
     <script src="dist/libs/jquery/dist/jquery.js"></script>
     <script src="dist/libs/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="dist/js/main.js"></script>
     <script src="dist/js/views/employeeListView.js"></script>
 </body>
 </html>
