added customer with async example

--- a/customers.html
+++ b/customers.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,34 +8,25 @@
     <link rel="stylesheet" href="dist/libs/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="dist/libs/toastr/build/toastr.css">
     <link rel="stylesheet" href="dist/css/site.css">
-    <title>Switch Statement</title>
+    <title>Html Template</title>
 </head>
-
 <body class="container">
 
 <header id="header"></header>
 
-<main>
-    <form id="form" name="form">
-        <section class="form-group">
-            <label for="ddlCountry"></label>
-            <select name="ddlCountry" id="ddlCountry" class="form-control">
-                <option selected value="Select One">Select One</option>
-            </select>
-        </section>
-        <section class="form-group">
-            <button id="btnCheck" name="btnCheck" class="btn btn-primary btn-lg">Show Selection</button>
-        </section>
-    </form>
-
+<div id="spinner" class="spinner-border d-none" style="width: 5rem; height: 5rem;" role="status">
+    <span class="sr-only">Loading...</span>
+</div>
+<main id="main">
 </main>
+
+<button id="btnLoadData" name="btnLoadData" class="btn-primary btn-lg">Load Data</button>
 <footer>
     &copy; Copyright 2021 HTML Template
 </footer>
 <!-- scripts -->
 <script src="dist/libs/jquery/dist/jquery.js"></script>
 <script src="dist/libs/bootstrap/dist/js/bootstrap.bundle.js"></script>
-<script src="dist/js/views/switchStatementView.js"></script>
+<script src="dist/js/views/customerView.js"></script>
 </body>
-
 </html>
