--- a/register.html
+++ b/register.html
@@ -12,48 +12,8 @@
 </head>
 <body class="container">
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Classes and Interfaces</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+<header id="header"></header>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="mathexamples.html">Math Examples</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="register.html">
-                    Register
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="carloan.html">
-                    Car Loan Calculator
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="employees.html">
-                    Employees
-                </a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link" href="switchStatement.html">
-                    switch/loops
-                </a>
-            </li>
-        </ul>
-    </div>
-</nav>
-<header>
-    <h1 id="header">Register </h1>
-</header>
 <main>
     <form id="registerForm" name="registerForm">
         <section class="form-group">
